--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,11 @@ a:hover {
 }
 .box-search-mobile{
 	margin-top: 15px;
+	width: 100%;
+	float: left;
+}
+.top-header-mobile{
+	margin-top: 20px;
 }
 .box-search .text {
     background: none repeat scroll 0 0 #FFFFFF;
@@ -257,4 +262,52 @@ footer .left p a{
 }
 .list-item-category .box a:hover{
 	color: #6ec5ea;
+}
+.breadcrumbx{
+	width: 100%;
+	float: left;
+	margin-top: 20px;
+}
+.breadcrumbx ul li{
+	display: inline-block;
+	margin-right: 10px;
+}
+.breadcrumbx .home{
+	color: #dc7d35;
+}
+.breadcrumbx .cate{
+	color: #7d796e;
+}
+.name_detailx{
+	color: #000;
+}
+.box-content-detail{
+	width: 100%;
+	float: left;
+}
+.box-content-detail .row{
+	margin-bottom: 30px;
+}
+.dathang{
+	width: 100%;
+	float: left;
+	margin-top: 30px;
+}
+.dathang a{
+	background: #dc7d35;
+	padding:10px 20px;
+	color: #fff;
+	text-transform: uppercase;
+}
+.detail_contentx{
+	margin-top: 30px;
+	width: 100%;
+	padding-bottom: 8px;
+	float: left;
+	border-bottom: 2px solid #dc7d35;
+}
+.detail_contentx span{
+	background-color: #dc7d35;
+	padding: 10px 20px;
+	color: #fff;
 }
