--- a/css/cus.css
+++ b/css/cus.css
@@ -82,25 +82,26 @@
 	margin-bottom: 0px;
 }
 .slider-for{
-	/*width: 500px;
-	height: 250px;*/
-	margin: 30px auto 1px;
+	width: 100%;
+	height: 250px;
+	/*margin: 30px auto 1px;*/
 	overflow: hidden;
 }
-/*img{
+.left-detail img{
 	width: 100%;
 	min-height: 100%;
-}*/
+}
 .slider-nav{
-	width: 500px;
+	width: 100%;
 	height: 85px;
-	margin: auto;
+	margin-top: 3px;
+	/*margin: auto;*/
 }
 .slider-nav .slick-track{
 	height: 85px;
 }
 .slick-arrow{
-		position: absolute;
+	position: absolute;
     top: 50%;
     z-index: 50;
     margin-top: -12px;
@@ -113,10 +114,6 @@
 	right: 0;
 	display: none !important;
 }
-.slick-dots{
-	display: none !important;
-}
-
 .hot-line-scroll{
 	width: 265px;
 	height: 95px;
